--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -131,24 +131,33 @@ Any "new feature / architecture ideas" should AT THE EARLIEST be worked on AFTER
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 
 
+Turn off ALL plugins, open browser console, and look through EVERY area, to make sure there are no errors / issues.
+
+
+For price charts / alerts config validation, IF it's alphavantage as the exchange, BUT 'stock' is NOT appended to the ticker, alert the user about the input error.
+
+
 Upgrade to bootstrap v5.3.8: 
 https://getbootstrap.com/docs/5.3/getting-started/download/
-
-
-Create a function is_valid_plugin($plugin_id), and add in the cached config upgrade system (make sure the cached config upgrade routine leaves alone "plugin_status" == off plugins that exist in the plugins directory, that were added by the plugins directory scanner [NOT hard-coded in the DEFAULT config]. Right now, that does NOT seem to be the case). Additionally, consider adding 'plugin_status' to be ignored during cached config upgrades, like we do for assets and price alerts / charts.
 
 
 Add a 'selected_networks' config, that's comma-delimited, and requires at least one valid network be selected. Add "coming soon" for Ethereum / Monad.
 
 
-Verticle scroll position is wonky in the plugins area, IF last-visted beforehand was a user area subsection.
-
-
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~DO AN APP RELEASE AT THIS POINT IN THIS LIST~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 
-So far, I've found very little data on how to parse out any data from the "services" value in Bitcoin "getnodeaddresses" RPC response. I have opened an issue here, requesting more documentation:
-https://github.com/bitcoin/bitcoin/issues/33930
+dyn_light_chart_update() should FIRST check to see IF THE PREVIOUS ARCHIVAL LINE MATCHES THE PREVIOUS LIGHT CHART LINE, before initiating a 'full scan' (which is essentially a FULL LIGHT CHART REBUIULD). The reasoning is some charts do NOT get new data more than once or twice DAILY (on-chain node count charts, etc), and may have the latest available archival interval IN THE LIGH CHART ALREADY (currently, we presume the interval should line up with that particular light chart's '$min_data_interval', as we get PRICE CHART data every 20 minutes).
+
+
+Monad PUBLIC RPCs:
+https://docs.monad.xyz/developer-essentials/network-information
+
+
+Instead of having load_cached_config() RESET TO DEFAULT CONFIG IF the cached config is CORRUPT, rewrite it so we have any 'restore_conf' file path ALREADY LOADED INTO A VAR, and IF set AND we test it and it's NOT corrupt, load that as the config INSTEAD, AND INCLUDE AN ERROR LOG ABOUT WHAT HAPPENED. IF instead, 'restore_conf' IS ALSO CORRUPT, THEN GO AHEAD AND RESET TO THE DEFAULT CONFIG. Right now, we loop through the list of secure files, so it's NOT ASSURED WE LOADED THE RESTORE CONFIG PATH FIRST. This needs to load seperately / earlier, so it's ready to use if needed.
+
+
+Now that nearly all the bundled plugins are built out well, populate their documentation pages (that show in the admin interfaces).
 
 
 Build a SECONDARY cache for RAW geolocation results from ip-api.com (no node info included for any crypto network), that only refeshes after 90 days. Key each array item with the ip address (like we do for node data in onchain stats), so we can easily look for entries. Then we can check this secondary cache FIRST, before queueing into a query for an ip-api.com API batch data request.
@@ -167,6 +176,11 @@ Do a pie chart for the Solana Version data.
 
 
 ==========================================
+We can filter what TYPE OF P2P NODE is being used, and add the counts to the node count chart. We just have to look into parsing the 'services' bitfield (uint64_t) number in the RCP data. We are limited ONLY TO P2P INFO:
+https://github.com/bitcoin/bitcoin/issues/33930
+https://en.bitcoin.it/wiki/Protocol_documentation#version
+https://bitcoin.stackexchange.com/search?q=service+bits
+
 Data in getblockstats, that we may want for charts:
 
 {"jsonrpc":"2.0",
@@ -214,7 +228,7 @@ Cleanup any EXTRA instances of gc_collect_cycles(), as it slows runtimes (especi
 Write a maintenance routine (run every 72 hours, in case user restores the plugin soon after deactivating it), that scans ALL plugin cache standardized ROOT directories, and deletes any subdirectory NOT matching any ACTIVATED plugins.
 
 
-Add is_valid_plugin() to plugins-init.php, in $ct['gen']->refresh_plugins_list(). 
+Create a function is_valid_plugin($plugin_id), to consolidate all plugin checking code into one function call. Add to plugins-init.php, and in $ct['gen']->refresh_plugins_list().
 
 
 See if we can use a more efficient coingecko marketcap data call, than what we use now. On a Raspberry Pi v4, we add at least 1.3 seconds to the UI runtime, IF marketcap asset max is set to the 1000 top coins. Maybe we can build a BATCHED single call, that includes mcap data (like we do for their 'simple price' API).
