--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -149,8 +149,16 @@ Store Solana "Transactions Since Genesis", and every 24 hours see how many more 
 Do a pie chart for the Solana Version data.
 
 
+Monad on coingecko terminal:
+https://www.geckoterminal.com/monad/pools
+
+
 Monad PUBLIC RPCs:
 https://docs.monad.xyz/developer-essentials/network-information
+
+
+Other Monad integrations:
+https://x.com/keoneHD/status/1995682158942331330
 
 
 ======================================================================
