fixes, TODO, dev notes, version bump
fixes, TODO, dev notes, version bump

--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -7083,9 +7083,9 @@ AND MIGRATE YOUR EXISTING CUSTOM SETTINGS TO THE NEW FORMAT.
 
 
 -------------------------------------------------------------------
-6.02.00
+6.01.08
 
--TBD
+-BUG FIX: Miscellaneous
 
 -------------------------------------------------------------------
 
